--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ required-features = ["cli"]
 
 [features]
 default = [ "cli" ]
-cli = ["simplelog", "structopt"]
+cli = ["simplelog", "structopt", "tempfile"]
 
 [dependencies]
 log = "0.4.14"
@@ -31,6 +31,7 @@ thiserror = "1.0"
 
 simplelog = { version = "0.10", optional = true }
 structopt = { version = "0.3.21", optional = true }
+tempfile = { version = "3.2.0", optional = true }
 
 [dev-dependencies]
 env_logger = "0.8.3"
