--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ homepage    = "https://github.com/informalsystems/unclog"
 repository  = "https://github.com/informalsystems/unclog"
 readme      = "README.md"
 categories  = ["developer-tools"]
-keywords    = ["changelog", "developer tools", "markdown"]
+keywords    = ["changelog", "markdown"]
 description = """
     unclog allows you to build your changelog from a collection of independent
     files. This helps prevent annoying and unnecessary merge conflicts when
