--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name        = "unclog"
-version     = "0.1.1"
+version     = "0.2.0"
 authors     = ["Thane Thomson <thane@informal.systems>"]
 edition     = "2018"
 license     = "Apache-2.0"
@@ -27,6 +27,8 @@ cli = ["simplelog", "structopt", "tempfile"]
 [dependencies]
 log = "0.4.14"
 semver = "1.0"
+serde = { version = "1.0", features = [ "derive" ] }
+serde_json = "1.0"
 thiserror = "1.0"
 
 simplelog = { version = "0.10", optional = true }
