--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 toml = "0.5"
+url = "2.2"
 
 simplelog = { version = "0.10", optional = true }
 structopt = { version = "0.3.21", optional = true }
