--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ default = ["cli"]
 cli = ["simplelog", "structopt", "tempfile"]
 
 [dependencies]
+handlebars = "4.1.3"
 log = "0.4.14"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -39,3 +40,4 @@ tempfile = { version = "3.2.0", optional = true }
 
 [dev-dependencies]
 env_logger = "0.8.3"
+lazy_static = "1.4.0"
