--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ log = "0.4.14"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+textwrap = "0.14.2"
 thiserror = "1.0"
 toml = "0.5"
 url = "2.2"
