Add ability to automatically generate config.toml file with GitHub project details
Signed-off-by: Thane Thomson <connect@thanethomson.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ default = ["cli"]
 cli = ["simplelog", "structopt", "tempfile"]
 
 [dependencies]
+git2 = "0.13.22"
 handlebars = "4.1.3"
 log = "0.4.14"
 semver = "1.0"
