--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,5 @@
+name: Build
+
 on:
   pull_request:
   push:
@@ -5,8 +7,16 @@ on:
       - master
 
 jobs:
+  cleanup-runs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: rokroskar/workflow-run-cleanup-action@master
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+    if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/master'"
+
   build:
-    name: Build for target ${{ matrix.target }}
+    name: Build for ${{ matrix.target_name }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -14,10 +24,13 @@ jobs:
         include:
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
+            target_name: Linux
           - target: x86_64-apple-darwin
             os: macos-latest
+            target_name: macOS
           - target: x86_64-pc-windows-gnu
             os: windows-latest
+            target_name: Windows
 
     steps:
       - uses: actions/checkout@v2
@@ -25,6 +38,7 @@ jobs:
         with:
           toolchain: stable
           override: true
+          target: ${{ matrix.target }}
       - uses: actions-rs/cargo@v1
         with:
           command: build
