--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   cleanup-runs:
+    name: Clean up runs
     runs-on: ubuntu-latest
     steps:
       - uses: rokroskar/workflow-run-cleanup-action@master
@@ -15,6 +16,7 @@ jobs:
     if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/master'"
 
   fmt:
+    name: Format
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -28,6 +30,7 @@ jobs:
           args: --all -- --check
 
   clippy-json-output:
+    name: Clippy check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -58,7 +61,6 @@ jobs:
           - target: x86_64-pc-windows-gnu
             os: windows-latest
             target_name: Windows
-
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
