--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -72,3 +72,5 @@ jobs:
         with:
           command: build
           args: --release --all-features --target ${{ matrix.target }}
+      - name: List all files in target dir
+        run: ls -lah ./target/release/
