--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,19 +47,16 @@ jobs:
 
   build:
     name: Build for ${{ matrix.target_name }}
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         include:
           - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
             target_name: Linux
           - target: x86_64-apple-darwin
-            os: macos-latest
             target_name: macOS
           - target: x86_64-pc-windows-gnu
-            os: windows-latest
             target_name: Windows
     steps:
       - uses: actions/checkout@v2
@@ -70,5 +67,8 @@ jobs:
           target: ${{ matrix.target }}
       - uses: actions-rs/cargo@v1
         with:
+          use-cross: true
           command: build
-          args: --release --all-features --target ${{ matrix.target }}
+          args: --bin unclog --release --all-features --target ${{ matrix.target }}
+      - name: List output files
+        run: ls -lah ./target/release/
