--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,17 +47,23 @@ jobs:
 
   build:
     name: Build for ${{ matrix.target_name }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         include:
           - target: x86_64-unknown-linux-gnu
             target_name: Linux
+            os: ubuntu-latest
+            debug_cmd: ls -lah ./target/release/
           - target: x86_64-apple-darwin
             target_name: macOS
+            os: macos-latest
+            debug_cmd: ls -lah ./target/release/
           - target: x86_64-pc-windows-gnu
             target_name: Windows
+            os: windows-latest
+            debug_cmd: ls -lah ./target/release/
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -67,8 +73,7 @@ jobs:
           target: ${{ matrix.target }}
       - uses: actions-rs/cargo@v1
         with:
-          use-cross: true
           command: build
           args: --bin unclog --release --all-features --target ${{ matrix.target }}
-      - name: List output files
-        run: ls -lah ./target/release/
+      - name: Debug
+        run: ${{ matrix.debug_cmd }}
