--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -91,3 +91,39 @@ jobs:
         with:
           name: ${{ matrix.target }}
           path: ${{ matrix.archive }}
+
+  release:
+    name: Release
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      - name: Download Linux binary artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: x86_64-unknown-linux-gnu
+          path: ./release/unclog-${{ steps.get_version.outputs.VERSION }}-linux-x86_64.tar.bz2
+      - name: Download macOS binary artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: x86_64-apple-darwin
+          path: ./release/unclog-${{ steps.get_version.outputs.VERSION }}-darwin-x86_64.tar.bz2
+      - name: Download Windows binary artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: x86_64-pc-windows-gnu
+          path: ./release/unclog-${{ steps.get_version.outputs.VERSION }}-win-x86_64.tar.bz2
+      - name: Compute SHA256 hashes of binary archives
+        run: |
+          sha256sum ./release/* > ./release/sha256sum.txt
+          cat ./release/sha256sum.txt
+      - name: List binaries
+        run: ls -lah ./release/
+      - name: Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./release/*
