--- a/.github/workflows/check-build-release.yml
+++ b/.github/workflows/check-build-release.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Check, build and release
 on:
   pull_request:
   push:
@@ -47,9 +47,23 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features --all-targets -- -Dwarnings -Drust-2018-idioms
 
+  test:
+    runs-on: ubuntu-latest
+    needs: clippy-json-output
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all-features
+
   build:
     name: Build for ${{ matrix.target_name }}
-    needs: cleanup-runs
+    needs: test
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
