--- a/.github/workflows/check-build-release.yml
+++ b/.github/workflows/check-build-release.yml
@@ -119,25 +119,27 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: x86_64-unknown-linux-gnu
-          path: ./release/unclog-${{ steps.get_version.outputs.VERSION }}-linux-x86_64.tar.bz2
+          path: ./artifacts/unclog-${{ steps.get_version.outputs.VERSION }}-linux-x86_64.tar.bz2
       - name: Download macOS binary artifact
         uses: actions/download-artifact@v2
         with:
           name: x86_64-apple-darwin
-          path: ./release/unclog-${{ steps.get_version.outputs.VERSION }}-darwin-x86_64.tar.bz2
+          path: ./artifacts/unclog-${{ steps.get_version.outputs.VERSION }}-darwin-x86_64.tar.bz2
       - name: Download Windows binary artifact
         uses: actions/download-artifact@v2
         with:
           name: x86_64-pc-windows-gnu
-          path: ./release/unclog-${{ steps.get_version.outputs.VERSION }}-win-x86_64.zip
+          path: ./artifacts/unclog-${{ steps.get_version.outputs.VERSION }}-win-x86_64.zip
+      - name: List artifacts 1
+        run: ls -lah ./artifacts/
       - name: Compute SHA256 hashes of binary archives
         run: |
-          sha256sum ./release/* > ./release/sha256sum.txt
+          sha256sum ./artifacts/* > ./artifacts/sha256sum.txt
           cat ./release/sha256sum.txt
-      - name: List binaries
-        run: ls -lah ./release/
+      - name: List artifacts 2
+        run: ls -lah ./artifacts/
       - name: Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
-          files: ./release/*
+          files: ./artifacts/*
