--- a/.github/workflows/check-build-release.yml
+++ b/.github/workflows/check-build-release.yml
@@ -115,6 +115,7 @@ jobs:
       - name: Get the version
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      - run: echo ${{ steps.get_version.outputs.VERSION }}
       - name: Download Linux binary artifact
         uses: actions/download-artifact@v2
         with:
