--- a/.github/workflows/check-build-release.yml
+++ b/.github/workflows/check-build-release.yml
@@ -1,4 +1,4 @@
-name: Check, build and release
+name: Check, build, release
 on:
   pull_request:
   push:
@@ -17,7 +17,6 @@ jobs:
 
   fmt:
     name: Format
-    needs: cleanup-runs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,7 +31,6 @@ jobs:
 
   clippy-json-output:
     name: Clippy check
-    needs: cleanup-runs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -49,7 +47,6 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: cleanup-runs
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -63,7 +60,6 @@ jobs:
 
   build:
     name: Build for ${{ matrix.target_name }}
-    needs: cleanup-runs
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -99,17 +95,20 @@ jobs:
           command: build
           args: --bin unclog --release --all-features --target ${{ matrix.target }}
       - name: Archive for platform
+        if: startsWith(github.ref, 'refs/tags/')
         run: ${{ matrix.archive_cmd }}
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           name: ${{ matrix.target }}
           path: ${{ matrix.archive }}
 
   release:
     name: Release
-    needs: [clippy-json-output, test, build]
+    needs: [test, build]
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v2
       - name: Get the version
@@ -140,7 +139,7 @@ jobs:
       - name: List artifacts 2
         run: ls -lah ./artifacts/
       - name: Release
-        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
+          draft: true
           files: ./artifacts/*
