Fix job naming inconsistency
Signed-off-by: Thane Thomson <connect@thanethomson.com>

--- a/.github/workflows/check-build-release.yml
+++ b/.github/workflows/check-build-release.yml
@@ -46,6 +46,7 @@ jobs:
           args: --all-features --all-targets -- -Dwarnings -Drust-2018-idioms
 
   test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
