--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,9 +1,12 @@
 name: Security audit
 on:
+  schedule:
+    - cron: '0 0 * * *'
   push:
     paths: 
       - '**/Cargo.toml'
       - '**/Cargo.lock'
+
 jobs:
   security_audit:
     runs-on: ubuntu-latest
