--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,24 +18,13 @@ jobs:
   upload-assets:
     strategy:
       matrix:
-        include:
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
-          - target: aarch64-apple-darwin
-            os: macos-latest
-          - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
-          - target: x86_64-apple-darwin
-            os: macos-latest
-          # Universal macOS binary is supported as universal-apple-darwin.
-          - target: universal-apple-darwin
-            os: macos-latest
-          - target: x86_64-pc-windows-gnu
-            os: windows-latest
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - uses: taiki-e/install-action@cross
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           bin: unclog
@@ -55,8 +44,6 @@ jobs:
           #     - $target - Target triple.
           #     - $tag - Tag of this release.
           archive: $bin-$tag-$target
-          # (optional) Target triple, default is host triple.
-          target: ${{ matrix.target }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_PROFILE_RELEASE_LTO: true
