--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,24 +22,24 @@ required-features = ["cli"]
 
 [features]
 default = ["cli"]
-cli = ["simplelog", "structopt", "tempfile"]
+cli = ["simplelog", "clap", "tempfile"]
 
 [dependencies]
-git2 = "0.14"
+git2 = "0.16"
 handlebars = "4.3"
 log = "0.4"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-textwrap = "0.14"
+textwrap = "0.16"
 thiserror = "1.0"
-toml = "0.5"
-url = "2.2"
+toml = "0.7"
+url = "2.3"
 
 simplelog = { version = "0.12", optional = true }
-structopt = { version = "0.3", optional = true }
+clap = { version = "4.1", features = ["derive", "env"], optional = true }
 tempfile = { version = "3.3", optional = true }
 
 [dev-dependencies]
-env_logger = "0.9"
+env_logger = "0.10"
 lazy_static = "1.4"
