--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ url = "2.5"
 simplelog = { version = "0.12", optional = true }
 clap = { version = "4.4", features = ["derive", "env"], optional = true }
 tempfile = { version = "3.8", optional = true }
+chrono = "0.4.31"
 
 [dev-dependencies]
 env_logger = "0.10"
