--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ simplelog = { version = "0.12", optional = true }
 clap = { version = "4.4", features = ["derive", "env"], optional = true }
 tempfile = { version = "3.8", optional = true }
 chrono = "0.4.31"
+comfy-table = "7.1.0"
 
 [dev-dependencies]
 env_logger = "0.10"
